# drawbot

./: README.md  arduino_code.ino
src/ackermann_nav/: CMakeLists.txt  package.xml  route.xml
src/ackermann_nav/config/: costmap_common_params.yaml
src/ackermann_nav/include/: odom_updater.h
src/ackermann_nav/launch/: ackermann_controller.launch  fan_control.launch  hardware_test.launch  mapping.launch  motor_test.launch  navigation.launch  obstacle_detector.launch  obstacle_detector_sim.launch  rplidar.launch
src/ackermann_nav/maps/: map.pgm  map.yaml  route.xml
src/ackermann_nav/rviz/: obstacle_detector.rviz
src/ackermann_nav/scripts/: ackermann_controller.py  ackermann_controller_py.py  fan_control.py  motor_test.py  simple_fan_control.py
src/ackermann_nav/src/: ackermann_controller.cpp  arduino_interface.cpp  motor_test.cpp  move_distance.cpp  obstacle_detector.cpp  odom_updater.cpp  odom_updater.h  path_follower.cpp  rplidar_driver.cpp
src/ackermann_nav/src/arm_arduino_code/: arm_arduino_code.ino
src/ackermann_nav/urdf/: ackermann.urdf.xacro
