<?xml version="1.0"?>
<package format="2">
  <name>ackermann_nav</name>
  <version>0.1.0</version>
  <description>Ackermann vehicle navigation package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>ackermann_msgs</depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>amcl</exec_depend>
</package>