<?xml version="1.0"?>
<package format="2">
  <name>ackermann_nav</name>
  <version>0.0.1</version>
  <description>The ackermann navigation package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>move_base</depend>
  <depend>amcl</depend>
  <depend>robot_state_publisher</depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>gmapping</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>